# weekly-digest

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  monthly-profile.yml  weekly-newsletter.yml
docs/: ARCHITECTURE.md  SETUP.md
newsletter/: config.py  logging_config.py  main.py  models.py  personalize.py  render.py  send.py
newsletter/sources/: __init__.py  calendar.py  deals.py  songkick.py  ticketmaster.py  weather.py
newsletter/templates/: newsletter.html.j2
scripts/: generate_calendar_token.py  preview_newsletter.py
tests/: conftest.py  test_deals.py  test_main.py  test_personalize.py  test_render.py  test_sources.py
