[project]
name = "weekly-digest"
version = "0.1.0"
description = "A personalized weekly newsletter for Charlotte, NC — Google Calendar week-ahead, local weather, and Claude-ranked event recommendations delivered every Sunday via GitHub Actions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Andrew Mahn", email = "andrew.m.mahn@gmail.com" }]

dependencies = [
    "anthropic>=0.40.0",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.34.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "premailer>=3.10.0",
    "email-validator>=2.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
    "vcrpy>=6.0.1",
    "types-python-dateutil>=2.9.0",
]

[project.scripts]
weekly-digest = "newsletter.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["newsletter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "googleapiclient.*",
    "google_auth_oauthlib.*",
    "premailer.*",
    "vcr.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    # premailer 3.10 calls re.split with maxsplit as positional; Python 3.14
    # deprecates this. Not ours to fix — surfaces on Python 3.14+ test runs.
    "ignore::DeprecationWarning:premailer.*",
]
